--- a/AwakeServer/AwakeServer.csproj
+++ b/AwakeServer/AwakeServer.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DatabaseServices\" />
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
