feat: add DotNetEnv, Postgresql

--- a/AwakeServer/AwakeServer.csproj
+++ b/AwakeServer/AwakeServer.csproj
@@ -11,4 +11,11 @@
     <Folder Include="NetworkServices\NewFolder\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="2.5.0" />
+    <PackageReference Include="Npgsql" Version="7.0.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
