--- a/AwakeServer/.env
+++ b/AwakeServer/.env
@@ -4,3 +4,8 @@ DB_PORT=5432
 DB_NAME=awake
 DB_USERNAME=root
 DB_PASSWORD=root
+
+# APP CONFIG
+DEBUG=true
+NETWORK_BIND_HOST=127.0.0.1
+NETWORK_BIND_PORT=444
